# ResonanceEngine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Pipfile  ResonanceEngineDesign.md  conanfile.py  world.md
automation/: manage.py
automation/buildkit/: build_eurora.py  build_runner.py  conan_helper.py  conan_setup.py
automation/config/: project_config.py
automation/environment/: env_setup.py  generate_env.py  venv_helper.py
automation/utils/: __init__.py  code_format.py  file_utils.py  shell_utils.py
scripts/: setup_conan_env_conda.bat  setup_conan_env_conda.sh
src/: CMakeLists.txt  CMakeUserPresets.json
src/Core/: CMakeLists.txt
src/Core/Log/: CMakeLists.txt  Logger.cpp  Logger.h
tests/: CMakeLists.txt
tests/Core/: CMakeLists.txt
tests/Core/Log/: CMakeLists.txt  TestLogger.cpp
tools/: build.py  setup_conan_env_conda.bat
tools/python/: run.py
tools/python/ci_helpers/: builder.py  ci.py  ci_constants.py  ci_win.py  cmake_helper.py  cmake_toolchain_utils.py  conan_setup.py  config_loader.py  venv_setup.py
tools/python/common/: __init__.py  file_utils.py  logger.py  logger_config.py  path_utils.py  platform_utils.py  shell_utils.py
tools/python/config/: build_config.json  logger_config.json
