# 添加子模块
add_subdirectory(Core)
# add_subdirectory(AI)
# add_subdirectory(Rendering)
# add_subdirectory(Physics)
# add_subdirectory(Platform)
# add_subdirectory(Scripting)
# add_subdirectory(Utilities)
# add_subdirectory(Resources)

# 构建引擎库
# add_library(AetherEngine)
# target_link_libraries(AetherEngine PUBLIC
#     Core
# )
# target_include_directories(AetherEngine PUBLIC ../include)
